<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoTixonVibro_Status_v_1_x_x" Id="{c75af673-70f4-0db4-261b-677704ee016f}">
    <Declaration><![CDATA[TYPE TcoTixonVibro_Status_v_1_x_x EXTENDS TcoTixonGenericStatus : STRUCT
    {attribute addProperty Name "<#Component out of box#>- i6"}
    ComponentOutOfBox : BOOL;
    {attribute addProperty Name "<#Separator in work position#> - i7"}
    SeparatorWorkPos : BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>